# OpenCV_YOLO

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
